syntax = "proto3";

package disputes;

// ------------------------------
// Service
// ------------------------------

service DisputeService {
  rpc CreateDispute (CreateDisputeRequest) returns (Dispute);
  rpc ResolveDispute (ResolveDisputeRequest) returns (Dispute);
  rpc GetDisputesByUser (GetDisputesByUserRequest) returns (GetDisputesByUserResponse);
  rpc GetOpenDisputes (GetOpenDisputesRequest) returns (GetOpenDisputesResponse);
  rpc GetDisputeChat (GetDisputeChatRequest) returns (Chat);
  rpc AddDisputeComment (AddDisputeCommentRequest) returns (Comment);
  rpc GetDisputeComments (GetDisputeCommentsRequest) returns (GetDisputeCommentsResponse);
}

// ------------------------------
// Messages
// ------------------------------

message User {
  string id = 1;
  string name = 2;
  string role = 3;
}

message Chat {
  string id = 1;
  string type = 2;
  string disputeId = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message CreateDisputeRequest {
  string transactionId = 1;
  string initiatorId = 2;
  string reason = 3;
}

message ResolveDisputeRequest {
  string disputeId = 1;
  string moderatorId = 2;
  string resolution = 3;
  string winnerUserId = 4;
}

message GetDisputesByUserRequest {
  string userId = 1;
}

message GetDisputesByUserResponse {
  repeated Dispute disputes = 1;
}

message GetOpenDisputesRequest {}

message GetOpenDisputesResponse {
  repeated Dispute disputes = 1;
}

message Dispute {
  string id = 1;
  string transactionId = 2;
  string initiatorId = 3;
  string reason = 4;
  string status = 5;
  string moderatorId = 6;
  string resolution = 7;
  string winnerUserId = 8;
  string createdAt = 9;
  string updatedAt = 10;
}

message GetDisputeChatRequest {
  string disputeId = 1;
  string userId = 2;
}

message AddDisputeCommentRequest {
  string disputeId = 1;
  string userId = 2;
  string text = 3;
}

message GetDisputeCommentsRequest {
  string disputeId = 1;
  string userId = 2;
}

message GetDisputeCommentsResponse {
  repeated Comment comments = 1;
}

message Comment {
  string id = 1;
  string disputeId = 2;
  string userId = 3;
  string text = 4;
  bool isModerator = 5;
  string createdAt = 6;
  User user = 7;
} 